common/user-namespace/base/oauth2-proxy.authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: oauth2-proxy
  namespace: kubeflow-user-example-com
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - {}
